chore(origins): fix overflow in drawer

--- a/themes/origins/styles/component-drawer.scss
+++ b/themes/origins/styles/component-drawer.scss
@@ -18,6 +18,7 @@ yc-drawer {
     width: var(--drawer-width);
     inset-inline-start: calc(var(--drawer-width) * -1 - var(--drawer-offset));
     border-radius: var(--radius-md);
+    overflow: hidden;
     transition: var(--transition-duration-normal);
   }
   .drawer-overlay {
